fix: set overflow to auto on content class

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.content {
+  overflow: auto;
+}
+
 /* Source: https://getpublii.com/blog/one-line-css-solution-to-prevent-anchor-links-from-scrolling-behind-a-sticky-header.html */
 
 /*
